fix dog's image size on mobile

--- a/src/app/components/blocks/dogs/doughnut-chart.module.css
+++ b/src/app/components/blocks/dogs/doughnut-chart.module.css
@@ -24,6 +24,11 @@
     overflow: hidden;
 }
 
+.doughnutImage>img {
+    width: 100%;
+    height: 100%;
+}
+
 .doughnutName {
     position: absolute;
     font-size: 22px;
